@@ -1,29 +1,29 @@
-aclocal.m4
-config.h.in
-stamp-h.in
-Makefile.in
-configure
-librsvgConf.sh
-config.log
-config.h
-config.sub
-config.guess
-libtool
-ltmain.sh
-ltconfig
-config.cache
-config.status
-stamp-h
-librsvg-features.h
-Makefile
-librsvg-config
-librsvg-1.0.pc
 *.la
 *.lo
 .deps
 .libs
-test-ft-gtk
-test-ft
-test-rsvg
+Makefile
+Makefile.in
+aclocal.m4
+config.cache
+config.guess
+config.h
+config.h.in
+config.log
+config.status
+config.sub
+configure
 librsvg-*.tar.gz
+librsvg-1.0.pc
+librsvg-config
+librsvg-features.h
 librsvg.spec
+librsvgConf.sh
+libtool
+ltconfig
+ltmain.sh
+stamp-h
+stamp-h.in
+test-ft
+test-ft-gtk
+test-rsvg
