@@ -1,3 +1,10 @@
+2001-04-11  Darin Adler  <darin@eazel.com>
+
+	* rsvg.c: (rsvg_affine_expansion), (rsvg_render_bpath): Work
+	around bug in art_affine_expansion, which doesn't handle negative
+	numbers very well. This fixes a bug where librsvg would hang on
+	certain svg files.
+
 2001-04-08  Fatih Demir <kabalak@gtranslator.org>
 
 	* .cvsignore: Extended ignores to be right.
@@ -30,7 +37,7 @@
 	Bump gtk down to 1.2.9.
 	
 	* librsvg.spec.in:
-	Fix undefiend requires.
+	Fix undefined requires.
 	
 2001-04-02  Ramiro Estrugo  <ramiro@eazel.com>
 
